<resources>
    <string name="app_name">Crear Avatar</string>

    <string name="btnNombre">Nombre</string>
    <string name="btnSexo">Sexo</string>
    <string name="btnEspecie">Especie</string>
    <string name="btnProfesion">Profesión</string>

    <string name="hintdialogonombre">Nombre...</string>

    <string name="radioHombre">Hombre</string>
    <string name="radioMujer">Mujer</string>

    <string name="radioElfo">Elfo</string>
    <string name="radioEnano">Enano</string>
    <string name="radioHobbit">Hobbit</string>
    <string name="radioHumano">Humano</string>

    <string name="radioArquero">Arquero</string>
    <string name="radioGuerrero">Guerrero</string>
    <string name="radioMago">Mago</string>
    <string name="radioHerrero">Herrero</string>
    <string name="radioMinero">Minero</string>

    <string name="cadenavida">Vida</string>
    <string name="cadenamagia">Magia</string>
    <string name="cadenafuerza">Fuerza</string>
    <string name="cadenavelocidad">Velocidad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>