<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioProfesion"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioArquero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioArquero" />

        <RadioButton
            android:id="@+id/radioGuerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioGuerrero" />

        <RadioButton
            android:id="@+id/radioMago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioMago" />

        <RadioButton
            android:id="@+id/radioHerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioHerrero" />

        <RadioButton
            android:id="@+id/radioMinero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioMinero" />
    </RadioGroup>
</LinearLayout>