<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioEspecie"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioElfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioElfo" />

        <RadioButton
            android:id="@+id/radioEnano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioEnano" />

        <RadioButton
            android:id="@+id/radioHobbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioHobbit" />

        <RadioButton
            android:id="@+id/radioHumano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioHumano" />
    </RadioGroup>
</LinearLayout>